@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: safe.test,v 1.10 2002/09/02 19:16:24 hobbs Exp $
+# RCS: @(#) $Id: safe.test,v 1.10.2.1 2004/10/26 23:23:13 dgp Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -60,14 +60,14 @@ test safe-1.2 {Safe Tk loading into an interpreter} {
     safe::interpDelete a
     set l
 } $hidden_cmds
-test safe-1.3 {Safe Tk loading into an interpreter} {
+test safe-1.3 {Safe Tk loading into an interpreter} -body {
     catch {safe::interpDelete a}
     safe::interpCreate a
     safe::loadTk a
     set l [lsort [interp aliases a]]
     safe::interpDelete a
     set l
-} {encoding exit file load source}
+} -match glob -result {*encoding*exit*file*load*source*}
 
 test safe-2.1 {Unsafe commands not available} {
     catch {safe::interpDelete a}
